samples/_failures_safe/1761159004_7d472a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fed53ed3.c: In function ‘main’:
./samples/SAFE/__tmp_fed53ed3.c:144:9: error: expected ‘;’ at end of input
  144 |     mat2
      |         ^
      |         ;
./samples/SAFE/__tmp_fed53ed3.c:144:5: error: expected declaration or statement at end of input
  144 |     mat2
      |     ^~~~
